<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MakeOrderActivity">

    <TextView
            android:id="@+id/textViewGreetins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/greeting"
            android:textSize="24sp"
            android:textColor="@color/purple_500"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/radioGroupDrinks"
            tools:layout_editor_absoluteX="8dp"/>

    <RadioGroup
            android:id="@+id/radioGroupDrinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textViewGreetins"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/textViewAdditives">

        <RadioButton
                android:id="@+id/radioButtonTea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/purple_500"
                android:text="@string/tea"/>

        <RadioButton
                android:id="@+id/radioButtonCoffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/purple_500"
                android:text="@string/coffee"/>
    </RadioGroup>

    <TextView
            android:id="@+id/textViewAdditives"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/additives"
            android:textSize="24sp"
            android:textColor="@color/purple_500"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupDrinks"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxSugar"
            tools:layout_editor_absoluteX="8dp"/>

    <CheckBox
            android:id="@+id/checkBoxSugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textViewAdditives"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/sugar"
            app:layout_constraintEnd_toStartOf="@id/checkBoxMilk"
            android:textColor="@color/purple_500"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/textViewDrinkType"/>

    <CheckBox
            android:id="@+id/checkBoxMilk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewAdditives"
            android:text="@string/milk"
            app:layout_constraintStart_toEndOf="@id/checkBoxSugar"
            app:layout_constraintEnd_toStartOf="@id/checkBoxLemon"
            android:textColor="@color/purple_500"
            app:layout_constraintBottom_toTopOf="@+id/textViewDrinkType"/>

    <CheckBox
            android:id="@+id/checkBoxLemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewAdditives"
            android:text="@string/lemon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/checkBoxMilk"
            android:textColor="@color/purple_500"
            app:layout_constraintBottom_toTopOf="@+id/textViewDrinkType"/>

    <TextView
            android:id="@+id/textViewDrinkType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/chooseDrinkType"
            android:textSize="24sp"
            android:textColor="@color/purple_500"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSugar"
            app:layout_constraintBottom_toTopOf="@+id/spinnerTea"/>

    <Spinner
            android:id="@+id/spinnerTea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:entries="@array/typesOfTea"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/textViewDrinkType"
            app:layout_constraintBottom_toTopOf="@+id/makeOrder"/>

    <Spinner
            android:id="@+id/spinnerCoffee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:visibility="invisible"
            tools:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/textViewDrinkType"
            app:layout_constraintBottom_toTopOf="@+id/makeOrder"
            android:entries="@array/typesOfCoffee"
            />

    <Button
            android:id="@+id/makeOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerTea"
            android:text="@string/makeOrder"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>